<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bug Shield</string>
    <string name="action_settings">Settings</string>
    <string name="txt_description">Just turn it on and the bugs run</string>
    <string name="btn_shield_on">Shield on</string>
    <string name="btn_shield_off">Shield off</string>
    <string name="btn_shield">Shield Button</string>
    <string name="txt_shield1">Mosquitoes, gnats, flies, some bees, and most other flying creatures.</string>
    <string name="txt_shield2">Hi-Freq noise sends away spiders, rodents, and some other crawling bugs.</string>

</resources>
