<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ability44.bugsheild.MainActivity" >

    <TextView
        android:id="@+id/txt_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_app_disc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_shield1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_shield1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ToggleButton
                android:id="@+id/tog_shield1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="toggleShield"
                android:text="@string/btn_shield"
                android:textOff="@string/btn_shield_off"
                android:textOn="@string/btn_shield_on" />

            <TextView
                android:id="@+id/txt_sheild2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_shield2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ToggleButton
                android:id="@+id/tog_shield2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="tog3055"
                android:text="@string/btn_shield"
                android:textOff="@string/btn_shield_off"
                android:textOn="@string/btn_shield_on" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/txt_app_disc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_app"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/txt_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
